@@ -1044,6 +1044,23 @@ class TestDefaultControllerPlugin(unittest.TestCase):
         plugin.do_version(None)
         self.assertEqual(plugin.ctl.stdout.getvalue(), '3000\n')
 
+    def test_version_arg(self):
+        plugin = self._makeOne()
+        result = plugin.do_version('bad')
+        self.assertEqual(result, None)
+        val = plugin.ctl.stdout.getvalue()
+        self.assertTrue(val.startswith('Error: version accepts no arguments'), val)
+
+    def test_version_upcheck_failed(self):
+        plugin = self._makeOne()
+        plugin.ctl.upcheck = lambda: False
+        called = []
+        def f(*arg, **kw):
+            called.append(True)
+        plugin.ctl.options._server.supervisor.getSupervisorVersion = f
+        plugin.do_version('')
+        self.assertEqual(called, [])
+
     def test_reload_help(self):
         plugin = self._makeOne()
         plugin.help_reload()
@@ -1173,6 +1190,13 @@ class TestDefaultControllerPlugin(unittest.TestCase):
         self.assertEqual(result, None)
         self.assertEqual(calls[0], [['added'], ['changed'], ['removed']])
 
+    def test_reread_arg(self):
+        plugin = self._makeOne()
+        result = plugin.do_reread('bad')
+        self.assertEqual(result, None)
+        val = plugin.ctl.stdout.getvalue()
+        self.assertTrue(val.startswith('Error: reread accepts no arguments'), val)
+
     def test_reread_cant_reread(self):
         plugin = self._makeOne()
         from supervisor import xmlrpc
@@ -1240,6 +1264,13 @@ class TestDefaultControllerPlugin(unittest.TestCase):
         plugin.ctl.output = calls.append
         result = plugin.do_avail('')
         self.assertEqual(result, None)
+
+    def test_avail_arg(self):
+        plugin = self._makeOne()
+        result = plugin.do_avail('bad')
+        self.assertEqual(result, None)
+        val = plugin.ctl.stdout.getvalue()
+        self.assertTrue(val.startswith('Error: avail accepts no arguments'), val)
 
     def test_avail_shutdown_state(self):
         plugin = self._makeOne()
