@@ -1,8 +1,11 @@
 3.3.2-dev (Next 3.x Release)
 ----------------------------
 
-- ``supervisorctl reload`` now gives an error message if an argument is
+- ``supervisorctl reload`` now shows an error message if an argument is
   given.  Patch by Joel Krauska.
+
+- ``supervisorctl`` commands ``avail``, ``reread``, and ``version`` now show
+  an error message if an argument is given.
 
 3.3.1 (2016-08-02)
 ------------------
